Doctors page created; doctor filtering by speciality added; added onCLick to the logo image (redirects to home page); css fix->scrollbars are now hidden only in specialityMenu section

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,6 @@
    @apply bg-primary;
 }
 
-::-webkit-scrollbar {
+#specialityMenu::-webkit-scrollbar {
    @apply hidden;
 }
